# SpectralBio

./: .gitignore  Claw4S_conference.md  Makefile  PLANO_SKILL.md  README.md  SKILL.md  abstract.md  content.md  pyproject.toml
New Notebooks/: 00_campaign_manifest_and_cache_prep_T4.ipynb  01_baseline_alpha_and_naming_audit.ipynb  01_block1_baseline_alpha_regime_audit_h100.ipynb  02_block2_failure_mode_hunt_h100.ipynb  03_block4_model_agnostic_plms_h100.ipynb  03_block4_model_agnostic_plms_h100_v2.ipynb  05_block3_structure_bridge_h100.ipynb  06_block5_clinical_panel_audit_h100.ipynb  07_block10_structural_dissociation_tp53_h100.ipynb  07b_block10_structural_dissociation_tp53_h100.ipynb  07c_block10_structural_dissociation_tp53_h100.ipynb  08_block7_turbo_gallery_rescues_h100.ipynb  09_block7b_open_points_closure.ipynb  10_block7c_alpha_crossfamily_finalists_h100.ipynb  11_block11_covariance_rulebook_h100.ipynb  12_block12_orthogonal_validation_tp53_h100.ipynb  12b_block12_multifamily_coverage_aware_generalization_h100.ipynb  12c_block12_covariance_adjudication_structural_closure_h100.ipynb  12d_block12_final_nuclear_localization_h100.ipynb  13_block13_multitarget_generalization_closure_h100.ipynb  14_block14_holdout_control_closure_h100.ipynb  README.md
ci/: checksum_validate.sh  container_smoke.sh  replay_full_matrix.sh  replay_smoke.sh  schema_validate.sh
colab/: spectralbio.ipynb
configs/: brca1_transfer.yaml  brca2_replay.yaml  crebbp_replay.yaml  smoke_test.yaml  tp53_canonical.yaml  tsc2_replay.yaml
docker/: Dockerfile  devcontainer.json  (+1 more)
legacy/: README.md
(+641 files in other folders)
