[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectralbio"
version = "0.1.0"
description = "Canonical TP53-first executable benchmark for SpectralBio."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Davi Bonetto" }
]
dependencies = [
  "gradio==6.9.0",
  "numpy==2.1.3",
  "plotly==5.24.1",
  "pyyaml==6.0.2",
  "scikit-learn==1.5.2",
  "scipy==1.14.1",
  "torch==2.5.1; python_version < '3.13'",
  "torch>=2.6,<3; python_version >= '3.13'",
  "transformers==4.49.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
]

[project.scripts]
spectralbio = "spectralbio.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
